<resources>
    <string name="app_name">Todo List</string>
    <string name="note_hint">Введите текст заметки: </string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="save_button">Save</string>
    <string name="error_field_empty">Пожалуйста, заполните поле заметки!</string>
</resources>